# cobrabox

./: .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AUTHORS.md  DOCS_SETUP.md  LICENSE  Makefile  README.md  SPACE_EXPLORER_REWRITE.md  agents.md  environment.yml  main.py  mkdocs.yml  pyproject.toml  requirements.txt  test_space_explorer.py  test_space_explorer_rendering.py
.claude/: settings.local.json
.claude/skills/: .markdownlint.json
.github/workflows/: ci.yml  docs.yml  pr.yml  tests.yml
contributors/: dominik.txt  giulio.txt  joakim.txt  standa.txt
data/processed/: README.md
data/raw/: README.md
data/synthetic/: README.md
docs/: README.md  contributing_feature.md  hooks.py  how_to_make_a_pr.md  index.md  installation.md  quickstart.md  setup_github_ssh_key.md  setup_repo.md  version.md  your_first_pull_request.md
docs/agent-reviews/: ampent-tests.md  ampent.md  amplitude_entropy-tests.md  amplitude_entropy.md  amplitude_variation-tests.md  amplitude_variation.md  autocorr-tests.md  autocorr.md  bandfilter-tests.md  bandfilter.md  bandpower-tests.md  bandpower.md  coherence-tests.md  coherence.md  concat_aggregate-tests.md  concat_aggregate.md  cordance-tests.md  correlation.md  covariance-tests.md  covariance.md  dummy-tests.md  dummy.md  emd-tests.md  hilbert.md  (+45 more)
examples/: README.md  bonn_eeg_demo.py  chb_mit_demo.py  compare_windowing.py  connectivity_demo.py  connectivity_dimension_selection_demo.py  creating_dummy_data.py  data_basics.py  dataset_loader_demo.py  demo_SOZdetection_ictal.ipynb  demo_workflow_playing.ipynb  feature_fourier_transform_surrogates_demo.py  feature_granger_causality_complex_demo.py  feature_granger_causality_demo.py  feature_partial_correlation_demo.py  feature_phase_locking_value_demo.py  feature_pipeline_demo.py  helsinki_neonatal_demo.py  open_ieeg_demo.py  partial_correlation_demo.py  realistic_dataset_loader_demo.py  remote_dataset_download_demo.py  remote_datasets_demo.py  seizure_explorer_demo.ipynb  serialization_demo.py  siena_eeg_demo.py  sliding_window_aggregators_demo.py  swiss_eeg_long_demo.py  swiss_eeg_short_demo.py  visualization_basic_demo.py
scripts/: README.md  gen_stubs.py
tests/: README.md  conftest.py  test_Ampent.py  test_chord.py  test_data.py  test_data_copy_with_new_data.py  test_dataset_class.py  test_dataset_loader.py  test_datasets.py  test_downloader.py  test_feature_amplitude_entropy.py  test_feature_amplitude_variation.py  test_feature_autocorr.py  test_feature_bandfilter.py  test_feature_bandpower.py  test_feature_coherence.py  test_feature_concat_aggregate.py  test_feature_cordance.py  test_feature_covariance.py  test_feature_dummy.py  test_feature_emd.py  test_feature_envelope_correlation.py  test_feature_epileptogenicity_index.py  test_feature_fourier_transform_surrogates.py  test_feature_fractal_dimension.py  test_feature_granger_causality.py  test_feature_hilbert.py  test_feature_lempel_ziv.py  test_feature_line_length.py  test_feature_max.py  test_feature_mean.py  test_feature_min.py  test_feature_mutual_information.py  test_feature_nonreversibility.py  test_feature_partial_correlation.py  test_feature_partial_directed_coherence.py  test_feature_phase_locking_value.py  test_feature_reciprocal_connectivity.py  test_feature_recurrence_matrix.py  test_feature_sample_entropy.py  (+11 more)
(+528 files in other folders)
