[project]
name = "cobrabox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "xarray>=2026.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "RSE", "PIE", "RET", "ANN", "PLE", "ASYNC"]
ignore = ["E731", "RET503", "ANN401"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

