[project]
name = "cobrabox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "xarray>=2026.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "RSE", "PIE", "RET", "ANN", "PLE", "B", "C4", "UP", "NPY", "PT", "RUF"]
ignore = ["E731", "RET503", "ANN401"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "--cov=cobrabox --cov-report=term-missing"

[tool.coverage.run]
source = ["src/cobrabox"]
omit = ["src/cobrabox/features/dummy.py"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

