[project]
name = "cobrabox"
version = "0.2.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mne-connectivity>=0.7.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "xarray>=2026.2.0",
    "matplotlib>=3.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.19",
]
docs = [
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.28.0",
    "mkdocs-jupyter>=0.25.0",
]
[build-system]
requires = ["uv_build>=0.1,<0.11"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "RSE", "PIE", "RET", "ANN", "PLE", "B", "C4", "UP",
    "NPY", "PT", "RUF", "PD"
]
ignore = ["E731", "RET503", "ANN401", "UP040", "UP046", "UP047"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "--cov=cobrabox --cov-report=term-missing"

[tool.coverage.run]
source = ["src/cobrabox"]
omit = ["src/cobrabox/features/dummy.py", "src/cobrabox/egg/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ty.src]
exclude = ["src/cobrabox/features/dummy.py"]

